-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5
-
None
-
2682cbbf9 (dev)
Required.Proto3.ProtobufInput.RepeatedScalarMessageMerge.ProtobufOutput conformance test is failing:
ERROR, test=Required.Proto3.ProtobufInput.RepeatedScalarMessageMerge.ProtobufOutput: Output was not equivalent to reference message: deleted: optional_nested_message.corecursive.optional_int64: 1234 modified: optional_nested_message.corecursive.repeated_int32[0]: 1234 -> 4321 deleted: optional_nested_message.corecursive.repeated_int32[1]: 4321 , request=protobuf_payload: "\222\001\014\022\n\010\322\t\020\322\t\370\001\322\t\222\001\014\022\n\010\341!\030\341!\370\001\341!" requested_output_format: PROTOBUF message_type: "protobuf_test_messages.proto3.TestAllTypesProto3" test_category: BINARY_TEST, response=protobuf_payload: "\222\001\r\022\013\010\341!\030\341!\372\001\002\341!"
- is required for
-
QTBUG-104064
QProtobuf conformance testing
-
- In Progress
-